[package]
name = "emr_udfs"
version = "0.1.0"
authors = ["Manolo G. Ramirez T. <manolo.ramirez@adroll.com>"]
edition = "2018"

[lib]
name = "emr_udfs"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.12"
# ndarray = "0.13"
itertools = "0.9.0"

[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module"]
